# error-index-localization

./: generate.sh
gen_json/: .gitignore  Cargo.toml  main.rs
locales/en-US/: librustc.json  librustc_codegen_llvm.json  librustc_codegen_ssa.json  librustc_metadata.json  librustc_mir.json  librustc_passes.json  librustc_privacy.json  librustc_resolve.json  librustc_typeck.json  libsyntax.json  libsyntax_ext.json
