[package]
name = "gen_json"
version = "0.1.0"
authors = ["Manish Goregaokar <manishsmail@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gen_json"
path = "main.rs"

[dependencies]
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
